style: fix top border clipping on machines cards during hover translation

--- a/src/components/sections/Machines/Machines.module.css
+++ b/src/components/sections/Machines/Machines.module.css
@@ -31,6 +31,8 @@
 
 .trackOuter {
   overflow: hidden;
+  padding: 10px 0;
+  margin: -10px 0;
 }
 
 .track {
